@@ -1,6 +1,5 @@
 package pers.zlf.plugin.constant;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -18,20 +17,20 @@ public class ANNOTATION {
     public static final String GET_MAPPING = "org.springframework.web.bind.annotation.GetMapping";
     public static final String PUT_MAPPING = "org.springframework.web.bind.annotation.PutMapping";
     public static final String DELETE_MAPPING = "org.springframework.web.bind.annotation.DeleteMapping";
-    public static final List<String> MAPPING_LIST = Arrays.asList(REQUEST_MAPPING, POST_MAPPING, GET_MAPPING, PUT_MAPPING, DELETE_MAPPING);
+    public static final List<String> MAPPING_LIST = List.of(REQUEST_MAPPING, POST_MAPPING, GET_MAPPING, PUT_MAPPING, DELETE_MAPPING);
 
     /** controller注解 */
     public static final String CONTROLLER_1 = "org.springframework.web.bind.annotation.Controller";
     public static final String CONTROLLER_2 = "org.springframework.stereotype.Controller";
     public static final String REST_CONTROLLER = "org.springframework.web.bind.annotation.RestController";
-    public static final List<String> CONTROLLER_LIST = Arrays.asList(CONTROLLER_1, CONTROLLER_2, REST_CONTROLLER);
+    public static final List<String> CONTROLLER_LIST = List.of(CONTROLLER_1, CONTROLLER_2, REST_CONTROLLER);
 
     /** ibatis注解 */
     public static final String IBATIS_SELECT_PROVIDER = "org.apache.ibatis.annotations.SelectProvider";
     public static final String IBATIS_INSERT_PROVIDER = "org.apache.ibatis.annotations.InsertProvider";
     public static final String IBATIS_UPDATE_PROVIDER = "org.apache.ibatis.annotations.UpdateProvider";
     public static final String IBATIS_DELETE_PROVIDER = "org.apache.ibatis.annotations.DeleteProvider";
-    public static final List<String> IBATIS_PROVIDER_LIST = Arrays.asList(IBATIS_SELECT_PROVIDER, IBATIS_INSERT_PROVIDER, IBATIS_UPDATE_PROVIDER, IBATIS_DELETE_PROVIDER);
+    public static final List<String> IBATIS_PROVIDER_LIST = List.of(IBATIS_SELECT_PROVIDER, IBATIS_INSERT_PROVIDER, IBATIS_UPDATE_PROVIDER, IBATIS_DELETE_PROVIDER);
 
     /** 注解常用属性 */
     public static final String VALUE = "value";
