@@ -1,6 +1,5 @@
 package pers.zlf.plugin.constant;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -12,7 +11,7 @@ public class REQUEST {
     public static final String POST = "POST";
     public static final String PUT = "PUT";
     public static final String DELETE = "DELETE";
-    public static final List<String> TYPE_LIST = Arrays.asList(GET, POST, PUT, DELETE);
+    public static final List<String> TYPE_LIST = List.of(GET, POST, PUT, DELETE);
 
     /** 超时时间 */
     public static final int SOCKET_TIMEOUT = 2000;
